@@ -30,6 +30,8 @@ Maybe fake reports (bugs do not appear true)
 For next version or later (in random order, lucky first)
 ========================================================
 
+ * libero TOP bug reloaded: 
+   http://freepops.diludovico.it/index.php?showtopic=1542&st=0&#entry8974
  * they say that win32 without -w can crash
  * link the rss feed in the homepage
  * create the -dev ML
